# HAClaudeAgent

./: .gitignore  .pre-commit-config.yaml  README.md  hacs.json  opencode.json  pyproject.toml  repository.yaml  requirements_dev.txt
.claude/: CLAUDE.md
.github/workflows/: ci.yaml  validate.yaml
custom_components/ha_claude_agent/: __init__.py  config_flow.py  const.py  conversation.py  helpers.py  manifest.json  sensor.py  stream.py  stream_filters.py  strings.json  tools.py  usage.py
custom_components/ha_claude_agent/translations/: en.json
docs/: architecture-addon-and-integration.md
docs/superpowers/plans/: 2026-04-08-addon-separation.md  2026-04-08-pydantic-models-fastapi-migration.md  2026-04-09-streaming-responses.md  2026-04-09-transparent-sdk-forwarding.md  2026-04-11-cost-usage-tracking.md  2026-04-15-openai-backend-abstraction.md
docs/superpowers/specs/: 2026-04-08-pydantic-models-fastapi-migration-design.md  2026-04-09-streaming-filter-processor-design.md  2026-04-09-streaming-responses-design.md  2026-04-11-cost-usage-tracking-design.md  2026-04-15-openai-backend-abstraction-design.md
ha_claude_agent_addon/: Dockerfile  config.yaml  pyproject.toml  requirements.txt
ha_claude_agent_addon/rootfs/etc/s6-overlay/s6-rc.d/ha-claude-agent/: finish  run
ha_claude_agent_addon/rootfs/etc/services.d/ha-claude-agent/: finish  run
ha_claude_agent_addon/src/: backend.py  ha_client.py  models.py  openai_events.py  serialization.py  server.py  tool_logic.py  tools.py  tools_claude.py  tools_openai.py
ha_claude_agent_addon/translations/: en.yaml
tests/: conftest.py  test_addon_backend.py  test_addon_openai_backend.py  test_addon_serialization.py  test_addon_serialization_pydantic.py  test_addon_tool_logic.py  test_addon_tools_claude.py  test_addon_tools_openai.py  test_integration_error_mapping_openai.py  test_integration_openai_stream.py  test_integration_stream.py  test_models_sync.py  test_runtime_data.py  test_stream_filters.py  test_usage.py
