[project]
name = "ha-claude-agent-addon"
# NOT the release version. The Supervisor reads ha_claude_agent_addon/config.yaml
# (authoritative for the add-on). This file only configures the add-on's Python
# environment, so a sentinel value prevents drift on every release cycle.
version = "0.0.0+dev"
requires-python = ">=3.13"
# Add-on runtime dependencies.
# Generate pinned requirements.txt: uv export --no-hashes -o requirements.txt
dependencies = [
    "claude-agent-sdk>=0.1.56",
    "openai-agents>=0.7.0",
    "aiohttp>=3.13.0",
    "fastapi>=0.135.0",
    "uvicorn[standard]>=0.44.0",
    "pydantic>=2.0.0",
]
